@@ -2,6 +2,7 @@
 # this repository contains the full copyright notices and license terms.
 from trytond.model import DeactivableMixin, ModelSQL, ModelView
 from trytond.pool import Pool
+from trytond.report import Report
 
 
 class TestMixin:
@@ -13,6 +14,10 @@ class TestSecondMixin:
 
 
 class NotMixin:
+    pass
+
+
+class ReportMixin:
     pass
 
 
@@ -34,3 +39,4 @@ def register(module):
     Pool.register_mixin(TestMixin, ModelView, module=module)
     Pool.register_mixin(TestSecondMixin, ModelView, module=module)
     Pool.register_mixin(NotMixin, ModelView, module='__wrong__')
+    Pool.register_mixin(ReportMixin, Report, module=module)
