@@ -1,3 +1,4 @@
+* Register mixins to generic Report class
 * Cache in memory the report template instances
 * Support Genshi's MsgDirective in report
 * Support PYSON comparison of date and datetime
